<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_title_bar" />

        <TextView
            android:id="@+id/txtSectionOne"
            style="@style/CommonSectionRowView"
            android:background="@color/transparent"
            android:text="@string/help_center_page_section_one"
            android:textColor="#666666"
            android:textSize="@dimen/px_40" />

        <TextView
            android:id="@+id/txtSectionTwo"
            style="@style/CommonSectionRowView"
            android:background="@color/transparent"
            android:text="@string/help_center_page_section_two"
            android:textColor="#666666"
            android:textSize="@dimen/px_40" />

        <TextView
            android:id="@+id/txtSectionThree"
            style="@style/CommonSectionRowView"
            android:background="@color/transparent"
            android:text="@string/help_center_page_section_three"
            android:textColor="#666666"
            android:textSize="@dimen/px_40" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtContactService"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_130"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/help_center_page_custom_service_bottom_margin"
        android:layout_marginLeft="@dimen/px_37"
        android:layout_marginRight="@dimen/px_37"
        android:background="@drawable/shape_border_radius"
        android:gravity="center"
        android:text="人工客服"
        android:textColor="@color/white"
        android:textSize="@dimen/px_50" />

</RelativeLayout>
